tnb_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc

# --- MongoDB Service (NodePort) ---
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  type: NodePort
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32017

# --- TickAndBit App Deployment ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickandbit-app-deployment
  labels:
    app: tickandbit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickandbit-app
  template:
    metadata:
      labels:
        app: tickandbit-app
    spec:
      containers:
        - name: tickandbit-app-container
          image: khushalchandak/tickandbit-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tickandbit-app-service
spec:
  selector:
    app: tickandbit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

# --- Ingress for External Access ---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickandbit-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tnb.192.168.0.223.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tickandbit-app-service
                port:
                  number: 80
